tests/compile-fail/integration_suite__integration__ecl_features__reg_as_positional_arg0.snap
---
source: tests/integration/ecl_features.rs
expression: stderr
---
error: non-constant expression in language without registers
  ┌─ <input>:9:16
  │
9 │     hasMsgArg0($REG[20], 3, 3);
  │                ^^^^^^^^ non-const expression


